# yargi-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  __main__.py  analyze_kik_hash_generation.py  app.py  asgi_app.py  fastapi_app.py  fastapi_server.py  fly-no-auth.toml  fly.toml  mcp_app.py  mcp_auth_factory.py  mcp_auth_http_adapter.py  mcp_auth_http_simple.py  mcp_factory.py  mcp_server_main.py  migration_app.py  oauth_middleware.py  oauth_router.py  postinstall.sh  pyproject.toml  requirements.txt  run_asgi.py  setup.py  starlette_app.py  stripe_webhook.py  test.html  token_manager.py  web_routes.py
.github/workflows/: publish.yml
.serena/: project.yml
anayasa_mcp_module/: api_client.py  bireysel_client.py  client.py  models.py  unified_client.py
bddk_mcp_module/: __init__.py  client.py  models.py
bedesten_mcp_module/: client.py  enums.py  models.py
danistay_mcp_module/: client.py  models.py
emsal_mcp_module/: client.py  models.py
gib_mcp_module/: __init__.py  client.py  models.py
kik_mcp_module/: client.py  client_v2.py  models.py  models_v2.py
kvkk_mcp_module/: __init__.py  client.py  models.py
mcp_auth/: clerk_config.py  middleware.py  oauth.py  policy.py
rekabet_mcp_module/: client.py  models.py
saidsurucu-yargi-mcp-f5fa007/: .env.example  asgi_app.py  check_response_format.py  example_fastapi_app.py  mcp_auth_http_adapter.py  mcp_auth_http_simple.py  mcp_server_main.py  pyproject.toml  redis_session_store.py  stripe_webhook.py
saidsurucu-yargi-mcp-f5fa007/anayasa_mcp_module/: bireysel_client.py  client.py  models.py  unified_client.py
saidsurucu-yargi-mcp-f5fa007/bddk_mcp_module/: models.py
sayistay_mcp_module/: __init__.py  client.py  enums.py  models.py  unified_client.py
semantic_search/: __init__.py  embedder.py  processor.py  vector_store.py
sigorta_tahkim_mcp_module/: client.py
static/: app.js  style.css
templates/: document.html  index.html
uyusmazlik_mcp_module/: client.py  models.py
yargitay_mcp_module/: client.py  models.py
(+18 files in other folders)
